# const_str

./: Cargo.toml
src/: lib.rs
tests/: test.rs
