[package]
name = "const_strum"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Convert enum variants to strings in a constant context. (const str[ing] [e]num)"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = "1.0.95"
